# diplomka

./: .gitignore  Cargo.toml  notes.md  out_test.json  prepisy_tests.txt  readme.md  temp.dot  temp.json  temp.txt  test.svgh  test.txt  test_out.csv  unflattened.dot
data/: loss.json  summer_simple.json  translations.txt
data/annotations/: nos1.json
data/asr/: test_01.txt
data/grammars/: _MANUAL_summer_simple.abnf  summer.abnf  summer.sbnf  summer.spgf  summer_simple.abnf  summer_simple.sgram
data/preps/: old_summer_simple_prep.json  summer.json  summer_simple.json  summer_simple_prep.json
data/scenes/: summer.json  summer_simple.json
data/transcriptions/: nos1.json  transcripts.json
grammars/: color_values.abnf  summer_simple.abnf
notes/: diplomka_notes.md  evaluation.md  final_notes.md  notes.md  schuzka-29-2.md  schuzka.md  simplified_srgs_def.md  todos.md
notes/diagrams/: .$dataflow.drawio.bkp  dataflow.drawio
scripts/: cleaner.py  csv2d2.nu  form_fetcher.nu  gramgen.nu  merger.py  runner.nu  uwerbasr.sh
src/: cli.rs  dataloader.rs  errors.rs  eval.rs  fetch.rs  generator.rs  main.rs  parser.rs  renderer.rs  semantic_parser.rs  slu.rs  utils.rs
theses/: dotazy.md  main.tex
theses/src/: abstrakt.tex  architektura.tex  biblio.bib  colored_table.tex  desky.tex  extrakce_semantiky.tex  final_table.tex  implementace.tex  implementace_popis_obrazku.tex  moje_gramatika.tex  moje_hodnoceni.tex  moje_reprezentace_znalosti.tex  moje_semantika.tex  navrh.tex  popis_obrazku.tex  prepisy.tex  prepisy2.tex  prohlaseni.tex  reprezentace_znalosti.tex  (+9 more)
(+13 files in other folders)
