[package]
name = "diplomka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
image = "0.24.8"
imageproc = { version = "0.23.0", features = ["display-window"] }
itertools = "0.12.1"
log = "0.4.20"
rusttype = "0.9.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
gasp = { path = "/home/tom/Projects/gasp" }
regex = "1.10.3"
ureq = { version = "2.9.5", features = ["json"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
